--- a/frontend/gnosity/index.html
+++ b/frontend/gnosity/index.html
@@ -6,7 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Macondo+Swash+Caps&family=Pixelify+Sans:wght@400..700&display=swap"
+    rel="stylesheet">
+
   <link
     href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Macondo+Swash+Caps&display=swap"
     rel="stylesheet">
